// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageArea renders correctly with nested comments 1`] = `
<div>
  <div
    class="message-area"
  >
    <div
      class="thread-start"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author1
          </div>
          <div
            class="date"
          >
            2000-01-01 00:01:00
          </div>
        </div>
        <div
          class="content"
        >
          <div
            class="message"
          />
        </div>
      </div>
    </div>
    <div
      class="comments"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author2
          </div>
          <div
            class="date"
          >
            2000-01-01 00:02:00
          </div>
        </div>
        <div
          class="content"
        >
          <div
            class="message"
          />
        </div>
        <div
          class="message-box response"
        >
          <div
            class="metadata"
          >
            <div
              class="author"
            >
              Author4
            </div>
            <div
              class="date"
            >
              2000-01-01 00:04:00
            </div>
          </div>
          <div
            class="content"
          >
            <div
              class="message"
            />
          </div>
        </div>
        <div
          class="message-box response"
        >
          <div
            class="metadata"
          >
            <div
              class="author"
            >
              Author5
            </div>
            <div
              class="date"
            >
              2000-01-01 00:05:00
            </div>
          </div>
          <div
            class="content"
          >
            <div
              class="message"
            />
          </div>
        </div>
      </div>
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author3
          </div>
          <div
            class="date"
          >
            2000-01-01 00:03:00
          </div>
        </div>
        <div
          class="content"
        >
          <div
            class="message"
          />
        </div>
      </div>
    </div>
    <div
      class="response-section"
    >
      <div
        class="response-field"
      >
        <textarea
          class="response-text-input"
          maxlength="500"
          placeholder="Write an answer..."
          type="text"
        />
      </div>
      <div
        class="analysis-report"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Reply
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageArea renders correctly with props 1`] = `
<div>
  <div
    class="message-area"
  >
    <div
      class="thread-start"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author
          </div>
          <div
            class="date"
          >
            2000-01-01 00:00:00
          </div>
        </div>
        <div
          class="content"
        >
          <div
            class="message"
          />
        </div>
      </div>
    </div>
    <div
      class="comments"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author
          </div>
          <div
            class="date"
          >
            2000-01-01 00:00:00
          </div>
        </div>
        <div
          class="content"
        >
          <div
            class="message"
          />
        </div>
      </div>
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author
          </div>
          <div
            class="date"
          >
            2000-01-01 00:00:00
          </div>
        </div>
        <div
          class="content"
        >
          <div
            class="message"
          />
        </div>
      </div>
    </div>
    <div
      class="response-section"
    >
      <div
        class="response-field"
      >
        <textarea
          class="response-text-input"
          maxlength="500"
          placeholder="Write an answer..."
          type="text"
        />
      </div>
      <div
        class="analysis-report"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Reply
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
